<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Remember Me</string>
    <string name="content_descr">image/png</string>
    <string name="alarm">Alarm</string>
    <string name="start_alarm">Start</string>
    <string name="alarm_scheduled">Alarm Scheduled</string>
    <string name="miutes">Minutes</string>
    <string name="hour">Hour</string>
    <string name="arzttermin_">Arzttermin: </string>
    <string name="menstruation_">"Menstruation: "</string>
    <string name="stimmung_">"Stimmung: "</string>
    <string name="symptome_">"Symptome: "</string>
    <string name="notiz_">"Notiz: "</string>
    <string name="heir_kannst_du_deine_notiz_eingeben_">Heir kannst du deine Notiz eingeben!</string>
    <string name="begin_ende_pilleneinnahme">Begin/Ende Pilleneinnahme</string>

</resources>