<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/calendarToJournalButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:paddingBottom="10dip" >
    </ImageView>

    <LinearLayout
        android:id="@+id/button_set"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="right" >

        <ImageButton
            android:id="@+id/info_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/info_btn"
            android:contentDescription="@string/content_descr"
            android:onClick="onButtonSetClick"
            android:textColor="#000000" >
        </ImageButton>

        <ImageButton
            android:id="@+id/key_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/lock_btn"
            android:contentDescription="@string/content_descr"
            android:onClick="onButtonSetClick"
            android:textColor="#000000" >
        </ImageButton>

        <ImageButton
            android:id="@+id/alarm_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/clock_btn"
            android:contentDescription="@string/content_descr"
            android:onClick="onButtonSetClick"
            android:textColor="#000000" >
        </ImageButton>

        <ImageButton
            android:id="@+id/plus_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/add_btn"
            android:contentDescription="@string/content_descr"
            android:onClick="onButtonSetClick"
            android:textColor="#000000" >
        </ImageButton>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/blue_bg_with_text" >

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="15dp" >

            <ImageView
                android:id="@+id/prevMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/calendar_left_arrow_selector" >
            </ImageView>

            <Button
                android:id="@+id/currentMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:background="@drawable/calendar_bar"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FFFFFF" >
            </Button>

            <ImageView
                android:id="@+id/nextMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/calendar_right_arrow_selector" >
            </ImageView>
        </LinearLayout>
    </LinearLayout>

    <GridView
        android:id="@+id/calendar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:numColumns="7" >
    </GridView>
    <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            >
    <LinearLayout
        android:id="@+id/info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/notes"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/notiz_"
            android:textColor="#ffffff"
            android:textSize="16dp" >
        </TextView>

        <TextView
            android:id="@+id/symptomes"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/symptome_"
            android:textColor="#ffffff"
            android:textSize="16dp" >
        </TextView>

        <TextView
            android:id="@+id/stimung"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/stimmung_"
            android:textColor="#ffffff"
            android:textSize="16dp" >
        </TextView>

        <TextView
            android:id="@+id/minstruation"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/menstruation_"
            android:textColor="#ffffff"
            android:textSize="16dp" >
        </TextView>

        <TextView
            android:id="@+id/time"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/arzttermin_"
            android:textColor="#ffffff"
            android:textSize="16dp" >
        </TextView>
    </LinearLayout>
    </ScrollView>

</LinearLayout>